test/error/11.c
int main(void){
    
    struct k;
    enum k;
}